<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/layout_padding"
    android:paddingEnd="@dimen/layout_padding"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">
  <TextView
      android:id="@+id/name_text"
      style="@style/NameStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/name"
      android:textAlignment="center" />
  <EditText
      android:id="@+id/nickname_edit"
      style="@style/NameStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/what_is_your_nickname"
      android:inputType="textPersonName"
      android:textAlignment="center" />
  <Button
      android:id="@+id/done_button"
      style="@style/Widget.AppCompat.Button.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/layout_margin"
      android:layout_gravity="center_horizontal"
      android:fontFamily="@font/roboto"
      android:text="@string/done" />
  <ImageView
      android:id="@+id/star_image"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/layout_margin"
      android:contentDescription="@string/yellow_star"
      app:srcCompat="@android:drawable/btn_star_big_on" />
  <TextView
      android:id="@+id/nickname_text"
      style="@style/NameStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      android:background="@color/colorAccent"
      android:paddingBottom="@dimen/small_padding"
      android:visibility="gone" />
  <ScrollView
      android:id="@+id/big_scroll"
      style="@style/NameStyle"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:textAlignment="center">
    <TextView
        android:id="@+id/bio_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/bio" />
  </ScrollView>
</LinearLayout>
